[gd_scene load_steps=8 format=3 uid="uid://e4f7a2d8b13c"]

[ext_resource type="Script" uid="uid://tdldmr5wkgcp" path="res://Characters/Components/attacks/quick_jab_attack.gd" id="1_1vxl5"]
[ext_resource type="PackedScene" uid="uid://h4mf5vplyt0x" path="res://Characters/Components/dynamic_hit_box.tscn" id="2_r3s5d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_small_neutral"]

[sub_resource type="Animation" id="Animation_reset"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("QuickJabAttack/HitBox:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("QuickJabAttack/HitBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("QuickJabAttack/HitBox/CollisionShape2D:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("RectangleShape2D_small_neutral")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("QuickJabAttack/HitBox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("QuickJabAttack/HitBox:monitorable")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_large_hit"]
size = Vector2(30, 50)

[sub_resource type="Animation" id="Animation_quick_jab"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("QuickJabAttack/HitBox:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("QuickJabAttack/HitBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.375, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(20, 0), Vector2(45, 0), Vector2(30, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("QuickJabAttack/HitBox/CollisionShape2D:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25, 0.375),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [SubResource("RectangleShape2D_small_neutral"), SubResource("RectangleShape2D_large_hit")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("QuickJabAttack/HitBox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("QuickJabAttack/HitBox:monitorable")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.25062287, 0.50341564),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_main"]
_data = {
&"RESET": SubResource("Animation_reset"),
&"attack": SubResource("Animation_quick_jab")
}

[node name="QuickJabAttack" type="Node2D"]
script = ExtResource("1_1vxl5")

[node name="AttackAnimator" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_main")
}

[node name="HitBox" parent="." instance=ExtResource("2_r3s5d")]
monitorable = true

[node name="Panel" type="Panel" parent="HitBox"]
offset_left = -11.0
offset_top = -11.0
offset_right = 10.0
offset_bottom = 11.0
metadata/_edit_use_anchors_ = true
